[package]
name = "high_scores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlite = "0.36.1"
tokio = {version = "1.41.1", features=["rt-multi-thread"]}
